Viewport vertex color mode: now it uses only sculpt vertex colors, even if datablock do not exist #78225

Closed
opened 2020-06-24 21:41:02 +02:00 by Vyacheslav Kobozev · 15 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 14:01, hash: 6fec2e4db0
Caused by f7bbc7cdbb

Short description of error
Vertex color doesn't show in edit mode, it return only black

1.png
2.png

Exact steps for others to reproduce the error

  • Change the viewport shading color to vertex
  • Go to vertex paint mode, fill any object with any color
  • Go to edit mode, then it appears only black

this example from default startup:
bug.blend

BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:760, texpaint_request_active_vcol(), at 'cd_needed.vcol != 0 && "No MLOOPCOL layer available in vertpaint, but batches requested anyway!"'

Original report [this is about objectmode as well -- this does not happen with experimental feature disabled]

If old vertex color exist and new sculpt vertex colors is not, I think, viewport should take first one until full replacement.
As far as addons will import vcolors to regular vertex color, it may be handy too.
2020-06-24_22-36-40.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 14:01, hash: `6fec2e4db0` Caused by f7bbc7cdbb **Short description of error** Vertex color doesn't show in edit mode, it return only black ![1.png](https://archive.blender.org/developer/F8841368/1.png) ![2.png](https://archive.blender.org/developer/F8841370/2.png) **Exact steps for others to reproduce the error** - Change the viewport shading color to vertex - Go to vertex paint mode, fill any object with any color - Go to edit mode, then it appears only black this example from default startup: [bug.blend](https://archive.blender.org/developer/F8841354/bug.blend) ``` BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:760, texpaint_request_active_vcol(), at 'cd_needed.vcol != 0 && "No MLOOPCOL layer available in vertpaint, but batches requested anyway!"' ``` **Original report [this is about objectmode as well -- this does not happen with experimental feature disabled]** If old vertex color exist and new sculpt vertex colors is not, I think, viewport should take first one until full replacement. As far as addons will import vcolors to regular vertex color, it may be handy too. [2020-06-24_22-36-40.mp4](https://archive.blender.org/developer/F8641200/2020-06-24_22-36-40.mp4)

#80478 was marked as duplicate of this issue

#80478 was marked as duplicate of this issue

#78283 was marked as duplicate of this issue

#78283 was marked as duplicate of this issue

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscribers: @PabloDobarro, @lichtwerk

Added subscribers: @PabloDobarro, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I think this is a bug, yes...

CC @PabloDobarro

I think this is a bug, yes... CC @PabloDobarro
Philipp Oeser changed title from Viewport vertex color mode: now it uses only sculpt vertex colors, even if datablock do not exist. (bug?) to Viewport vertex color mode: now it uses only sculpt vertex colors, even if datablock do not exist 2020-06-26 13:55:01 +02:00
Member

Added subscribers: @mike.cairns86, @Alaska

Added subscribers: @mike.cairns86, @Alaska
Member

Removed subscriber: @Alaska

Removed subscriber: @Alaska
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

@lichtwerk: currently this issue is only visible when Sculpt Vertex Colors is activated in the experimental tab. I would suggest to keep this ticket open, but lower the priority. I have seen some discussions about how to proceed with sculpt vertex vs loop vertex colors, but no clear direction afaik. As both codepaths are split in the current codebase a fix would not be in the area where I would expected it to happen.

@lichtwerk: currently this issue is only visible when Sculpt Vertex Colors is activated in the experimental tab. I would suggest to keep this ticket open, but lower the priority. I have seen some discussions about how to proceed with sculpt vertex vs loop vertex colors, but no clear direction afaik. As both codepaths are split in the current codebase a fix would not be in the area where I would expected it to happen.
Member

In #78225#978676, @Jeroen-Bakker wrote:
@lichtwerk: currently this issue is only visible when Sculpt Vertex Colors is activated in the experimental tab. I would suggest to keep this ticket open, but lower the priority. I have seen some discussions about how to proceed with sculpt vertex vs loop vertex colors, but no clear direction afaik. As both codepaths are split in the current codebase a fix would not be in the area where I would expected it to happen.

In editmode, this is also happening when Sculpt Vertex Colors is deactivated in the experimental tab (also happening in 2.90 release).
Asserts here:

BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:760, texpaint_request_active_vcol(), at 'cd_needed.vcol != 0 && "No MLOOPCOL layer available in vertpaint, but batches requested anyway!"'

Feel free to change back, but I think we should not break existing functionality unless we have something better in place.

> In #78225#978676, @Jeroen-Bakker wrote: > @lichtwerk: currently this issue is only visible when Sculpt Vertex Colors is activated in the experimental tab. I would suggest to keep this ticket open, but lower the priority. I have seen some discussions about how to proceed with sculpt vertex vs loop vertex colors, but no clear direction afaik. As both codepaths are split in the current codebase a fix would not be in the area where I would expected it to happen. In editmode, this is also happening when Sculpt Vertex Colors is **deactivated** in the experimental tab (also happening in 2.90 release). Asserts here: ``` BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:760, texpaint_request_active_vcol(), at 'cd_needed.vcol != 0 && "No MLOOPCOL layer available in vertpaint, but batches requested anyway!"' ``` Feel free to change back, but I think we should not break existing functionality unless we have something better in place.
Member

Added subscriber: @masnain

Added subscriber: @masnain

This issue was referenced by bff56477c9

This issue was referenced by bff56477c9d8f1dda42f5cd58dbd8230897c2665

This issue was referenced by 0c4b732ef2

This issue was referenced by 0c4b732ef2cd5d3b4d6d7dbaa27801d1bfff04ae
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-09-07 17:22:29 +02:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:21:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78225
No description provided.